...
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuActionSend"
        android:icon="@drawable/ic_send_white_24dp"
        android:title="@string/send"
        app:showAsAction="always" />
</menu>
