...
                    android:text="@string/to"
                    android:textColor="@color/nobel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewChipsTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonAdditionalRecipientsVisibility"
                    app:layout_constraintStart_toStartOf="parent"
...
