...
    <string name="users_">Users:</string>
    <string name="fingerprints_">Fingerprints:</string>
    <string name="warning_key_expired">Warning: this key was expired on %1$s</string>
    <string name="warning_no_expected_email">Warning: it seems this key doesn\'t relates to expected email address %1$s</string>
    <string name="warning_one_of_recipients_has_expired_pub_key">One or more of your recipients have expired public keys (marked in orange).\n\nPlease ask them to send you updated public key. If this is an enterprise installation, please ask your systems admin.</string>
    <string name="warning_one_of_recipients_has_revoked_pub_key">One or more of your recipients have revoked public keys (marked in red).\n\nPlease ask them to send you a new public key. If this is an enterprise installation, please ask your systems admin.</string>
    <string name="warning_one_of_recipients_has_not_usable_pub_key">The public key of one of your recipients is wrong or not usable due to security reasons.\n\nPlease ask the recipient(s) to send you a new Public Key.</string>
    <string name="create_new_message">Create a new message</string>
    <string name="add_new_contact">Add a new contact</string>
    <string name="add_new_private_key">Add a new private key</string>
    <string name="could_not_add_new_account">Couldn\'t add a new account</string>
    <string name="please_leave_at_least_one_key">You can\'t delete all keys. Please leave at least one key available for encryption/decryption purposes</string>
    <string name="server_settings">Server settings</string>
...
    <string name="enter_new_private_key">Enter a new private key</string>
    <string name="new_private_key">New Private Key</string>
    <string name="more_than_one_private_key_found">We\'ve found more than one private key in the provided source. Please choose a source with a single public key.</string>
    <string name="please_provide_passphrase_for_the_given_key">Please provide a pass phrase for the given key</string>
    <string name="key_was_updated">Key %1$s was updated</string>
    <string name="please_provide_passphrase_to_proceed">Please provide a pass phrase to proceed</string>
    <string name="re_fetch_public_key">Re-fetch Public Key</string>
    <string name="message_was_not_decrypted_due_to_triple_des">Message was not decrypted because it uses a weak encryption algorithm %1$s</string>
    <string name="show_only_contacts_with_public_keys">Show only contacts with public keys</string>
    <string name="encrypted_subject_template"><![CDATA[<font color=\'#31A217\'>Encrypted subject:</font> %1$s]]></string>
    <string name="please_pay_attention_some_keys_were_skipped">Please note that some keys were skipped</string>
    <string name="this_key_is_unprotected_please_protect_it_with_pass_phrase_before_import">This key is unprotected. Please protect it with a pass phrase before import.</string>
    <string name="private_key_passphrase_anti_bruteforce_protection_hint">To protect you and your data, the next attempt will only be possible after the timer below finishes. Please wait until then before trying again.</string>
...
