/*
 * © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
 * Contributors: DenBond7
 */

package com.flowcrypt.email.ui.activity;

import com.flowcrypt.email.R;
import com.flowcrypt.email.TestConstants;
import com.flowcrypt.email.base.BaseTest;
import com.flowcrypt.email.database.dao.source.ContactsDaoSource;
import com.flowcrypt.email.model.PgpContact;
import com.flowcrypt.email.rules.AddAccountToDatabaseRule;
import com.flowcrypt.email.rules.AddContactsToDatabaseRule;
import com.flowcrypt.email.rules.ClearAppSettingsRule;

import org.junit.Rule;
import org.junit.Test;
import org.junit.rules.RuleChain;
import org.junit.rules.TestRule;
import org.junit.runner.RunWith;

import java.util.ArrayList;
import java.util.List;

import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.ActivityTestRule;

import static androidx.test.espresso.Espresso.closeSoftKeyboard;
import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.clearText;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withChild;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.not;


/**
 * @author Denis Bondarenko
 * Date: 23.02.2018
 * Time: 10:34
 * E-mail: DenBond7@gmail.com
 */

@LargeTest
@RunWith(AndroidJUnit4.class)
public class SelectContactsActivityTest extends BaseTest {
  private static final String[] EMAILS = new String[]{
      "contact_0@denbond7.com",
      "contact_1@denbond7.com",
      "contact_2@denbond7.com",
      "contact_3@denbond7.com"};
  private static final List<PgpContact> CONTACTS = new ArrayList<>();

  static {
    for (int i = 0; i < EMAILS.length; i++) {
      String email = EMAILS[i];
      PgpContact pgpContact;
      if (i % 2 == 0) {
        pgpContact = new PgpContact(email, getUserName(email), "publicKey", true,
            null, false, null, null, null, 0);
      } else {
        pgpContact = new PgpContact(email, null, "publicKey", true, null,
            false, null, null, null, 0);
      }
      CONTACTS.add(pgpContact);
    }
  }

  private ActivityTestRule activityTestRule = new ActivityTestRule<>(SelectContactsActivity.class);
  @Rule
  public TestRule ruleChain = RuleChain
      .outerRule(new ClearAppSettingsRule())
      .around(new AddAccountToDatabaseRule())
      .around(new AddContactsToDatabaseRule(CONTACTS))
      .around(activityTestRule);

  @Override
  public ActivityTestRule getActivityTestRule() {
    return activityTestRule;
  }

  @Test
  public void testShowEmptyView() throws Exception {
    clearContactsFromDatabase();

    //Need to wait a little while data will be updated
    Thread.sleep(2000);

    onView(withId(R.id.listViewContacts)).check(matches(matchEmptyList())).check(matches(not(isDisplayed())));
    onView(withId(R.id.emptyView)).check(matches(isDisplayed())).check(matches(withText(R.string.no_results)));
  }

  @Test
  public void testShowListContacts() {
    onView(withId(R.id.listViewContacts)).check(matches(isDisplayed())).check(matches(not(matchEmptyList())));
    onView(withId(R.id.emptyView)).check(matches(not(isDisplayed())));

    for (int i = 0; i < EMAILS.length; i++) {
      if (i % 2 == 0) {
        checkIsDataItemDisplayed(i, R.id.textViewName, getUserName(EMAILS[i]));
      } else {
        checkIsDataItemDisplayed(i, R.id.textViewOnlyEmail, EMAILS[i]);
      }
    }
  }

  @Test
  public void testCheckSearchExistingContact() {
    onView(withId(R.id.menuSearch)).check(matches(isDisplayed())).perform(click());
    for (int i = 0; i < EMAILS.length; i++) {
      if (i % 2 == 0) {
        checkIsTypedUserFound(R.id.textViewName, getUserName(EMAILS[i]));
      } else {
        checkIsTypedUserFound(R.id.textViewOnlyEmail, EMAILS[i]);
      }
    }
  }

  @Test
  public void testNoResults() {
    onView(withId(R.id.menuSearch)).check(matches(isDisplayed())).perform(click());
    onView(withId(com.google.android.material.R.id.search_src_text)).perform(clearText(),
        typeText("some email"));
    closeSoftKeyboard();
    onView(withId(R.id.listViewContacts)).check(matches(matchEmptyList()));
    onView(withId(R.id.emptyView)).check(matches(isDisplayed())).check(matches(withText(R.string.no_results)));
  }

  private static String getUserName(String email) {
    return email.substring(0, email.indexOf(TestConstants.COMMERCIAL_AT_SYMBOL));
  }

  private void clearContactsFromDatabase() {
    ContactsDaoSource contactsDaoSource = new ContactsDaoSource();
    for (String email : EMAILS) {
      contactsDaoSource.deletePgpContact(InstrumentationRegistry.getInstrumentation().getTargetContext(), email);
    }
  }

  private void checkIsTypedUserFound(int viewId, String viewText) {
    onView(withId(com.google.android.material.R.id.search_src_text)).perform(clearText(), typeText(viewText));
    closeSoftKeyboard();
    onView(withId(viewId)).check(matches(isDisplayed())).check(matches(withText(viewText)));
  }

  private void checkIsDataItemDisplayed(int index, int viewId, String viewText) {
    onData(anything())
        .inAdapterView(withId(R.id.listViewContacts))
        .onChildView(withChild(withId(viewId)))
        .atPosition(index)
        .check(matches(withChild(withText(viewText))));
  }
}
